<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_user_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBaseLight"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_username">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_name">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_created_at">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/created_at"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_type">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_company">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/company"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_blog">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/blog"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_location">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_email">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/hireable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_hireable">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hireable"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_bio">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/twitterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bio"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_twitter_username">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/publicRepos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/twitterUsername"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_public_repos">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/publicGists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/publicRepos"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_public_gists">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/publicGists"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_followers">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/followers"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_following">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/following"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                app:layout_goneMarginTop="0dp"
                android:hint="@string/label_note">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_edit_note"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerDetails" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>